ignore 3rd party header warnings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,18 @@
 cmake_minimum_required(VERSION 3.21)
 project(jca-gps)
 
+# ////////////////////////////////////////////////////////
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+add_compile_options(-Wall -Wextra -pedantic -Werror)
+
+# TESTING ////////////////////////////////////////////////
 
 find_package(Catch2 REQUIRED)
 add_executable(tests test.cpp gps.cpp)
@@ -15,6 +21,8 @@ target_link_libraries(tests Catch2::Catch2)
 include(CTest)
 include(Catch)
 catch_discover_tests(tests)
+
+# MAIN ///////////////////////////////////////////////////
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
